--- a/styles.css
+++ b/styles.css
@@ -215,25 +215,43 @@ input {
     overflow-y: auto;
     padding: 10px;
 }
+
 .container {
     display: flex;
-    justify-content: space-around; /* Esto alinea los elementos horizontalmente y distribuye el espacio de manera uniforme entre ellos */
+    justify-content: space-around; 
 }
+
 .mouse img {
     height: 75px;
 }
+
 .teclado img {
     height: 75px;
 }
+
 .memoria img {
     height: 75px;
 }
+
 .video img {
     height: 75px;
 }
+
 .disco img {
     height: 75px;
 }
+
 .centrado {
     text-align: center;
+}
+
+.centrado {
+    text-align: center;
+}
+
+h2 {
+    text-align: center; 
+    padding-bottom: 30px;
+    font-family: sans-serif;
+    font-size: x-large;
 }
