--- a/registro.css
+++ b/registro.css
@@ -68,6 +68,7 @@ body {
     .username input:focus ~ span::before{
         width: 100%;
     }
+
     input[type="submit"]{
         width: 100%;
         height: 50px;
@@ -82,4 +83,8 @@ body {
     input[type="submit"]:hover{
         border-color: purple;
         transition: .5s;
+    }
+    
+    label {
+        margin: 10px;
     }
