--- a/styles.css
+++ b/styles.css
@@ -248,13 +248,29 @@ input {
     text-align: center;
 }
 
-.centrado {
-    text-align: center;
-}
-
 h2 {
     text-align: center; 
     padding-bottom: 30px;
     font-family: sans-serif;
     font-size: x-large;
+}
+
+/* internet.html */
+
+.proveedores ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.proveedores ul li {
+    margin-bottom: 10px;
+}
+
+.proveedores ul li a {
+    text-decoration: none;
+    color: #333; /* Cambia el color del texto según tu preferencia */
+}
+
+.proveedores ul li a:hover {
+    color: #007bff; /* Cambia el color al pasar el ratón por encima */
 }
