--- a/styles.css
+++ b/styles.css
@@ -215,6 +215,10 @@ input {
     padding: 10px;
 }
 
+section {
+    margin-top: 50px;
+}
+
 .container {
     display: flex;
     justify-content: space-around; 
@@ -248,7 +252,7 @@ input {
     text-align: center;
 }
 
-h2 {
+h1 {
     text-align: center; 
     padding-bottom: 30px;
     font-family: sans-serif;
@@ -268,7 +272,7 @@ h2 {
 
 .proveedores ul li a {
     text-decoration: none;
-    color: #333; /* Cambia el color del texto según tu preferencia */
+    color: #333; 
 }
 
 .proveedores ul li a:hover {
