--- a/styles.css
+++ b/styles.css
@@ -278,3 +278,14 @@ h1 {
 .proveedores ul li a:hover {
     color: #007bff; /* Cambia el color al pasar el ratón por encima */
 }
+
+.iniciar-btn2{
+    color:#ff0000;
+    font-size: 16px;
+    border: 2px solid #ff0000;
+    border-radius: 5px;
+    background-color: transparent;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+    padding: 10px 20px;
+}
