--- a/styles.css
+++ b/styles.css
@@ -296,3 +296,46 @@ h1 {
     transition: background-color 0.3s, color 0.3s;
     padding: 10px 20px;
 }
+/*Empresa*/
+card{
+    background: #6ac;
+    text-align: center;
+    width: 300px;
+    margin: auto;
+    margin-top:50px;
+    padding: 20px 10px;
+    box-shadow:0px 0px 30px #0006;
+    border-radius: 8px;
+}
+
+.red-card{
+    background:#f86;
+}
+.card_title{
+    
+    font-size: 22px;
+    margin: 0;
+
+}
+.card_content{
+    font-size: 20px;
+    padding: 10px;
+    padding-bottom: 0;
+    text-align: justify;
+    margin-bottom: 0;
+
+
+}
+
+.card_subtitle{
+    font-size: 13px;
+    font-weight: 100;
+    letter-spacing:2px;
+    margin: 0;
+    margin-top: 5px;
+    
+}
+.card_img{
+    width:100px;
+    border-radius:50%;
+}
