--- a/camperas.css
+++ b/camperas.css
@@ -1,8 +1,6 @@
 .camperas {
     width: 20%; /* Ajusta el ancho de cada elemento según tu diseño */
-    margin-top: 30px; /* Espacio entre los elementos */
-    margin-right: 80px;
-    margin-left: 25px;
+    margin: 10px 30px; /* Espacio entre los elementos */
     display: inline-block; /* Para mostrar los elementos en línea */
     /* float: left; */ /* Alternativamente, puedes usar float para hacer que los elementos floten a la izquierda */
 }
