--- a/pago.css
+++ b/pago.css
@@ -5,24 +5,6 @@ body {
     background-color: #f8f8f8;
 }
 
-h1 {
-    text-align: center;
-}
-
-p {
-    font-size: 16px;
-    font-family: 'Times New Roman', Times, serif;
-}
-
-.header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100px; /* Ajusta el alto del header según sea necesario */
-    padding: 20px 0; /* Ajusta el padding según sea necesario */
-    background: linear-gradient(rgba(5, 7, 12, 0.15), rgba(5, 7, 12, 0.15)), url(./backgroundimage/6106991.webp) center center;
-    background-size: cover;
-}
 
 .container {
     max-width: 800px;
@@ -30,60 +12,25 @@ p {
     padding: 20px;
 }
 
-/* Estilos para el botón "Ir a Index" */
-.button-index {
-    background-color: #007bff; /* Color de fondo azul */
-    color: #fff; /* Color de texto blanco */
-    border: none; /* Sin borde */
-    padding: 10px 20px; /* Espaciado interno */
-    font-size: 16px; /* Tamaño de fuente */
-    border-radius: 5px; /* Bordes redondeados */
-    cursor: pointer; /* Cambia el cursor al pasar por encima */
-    transition: background-color 0.3s ease; /* Transición suave */
-}
-
-/* Cambiar el color de fondo al pasar el cursor por encima */
-.button-index:hover {
-    background-color: #0056b3; /* Color de fondo azul más oscuro */
-}
-
 .payment-methods {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
     flex-wrap: wrap;
+    margin-top: 20px;
 }
 
 .payment-method {
     text-align: center;
     margin: 10px;
-    padding: 10px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border: 1px solid #ddd;
-    transition: transform 0.3s ease-in-out;
-    width: calc(50% - 20px);
-    flex: 1 1 calc(50% - 20px);
-    max-width: 300px;
-}
-
-.payment-method:nth-child(odd) {
-    margin-right: 20px;
-}
-
-.payment-method:hover {
-    transform: translateY(-5px);
 }
 
 .payment-method img {
     width: 100px;
-    height: auto;
+    height: auto
 }
 
 .payment-method p {
-    margin-top: 10px;
-    font-size: 16px;
+    margin: 20px;
+    font-size: xx-large;
     text-align: center;
-    color: #333;
 }
