--- a/style3.css
+++ b/style3.css
@@ -6,10 +6,9 @@ box-sizing: border-box;
 outline: none; border:none;
 text-decoration: none;
 transition: all .2s linear;
-text-transform: capitalize;
 }
 
-html{
+html {
 font-size: 62.5%;
 overflow-x: hidden;
 }
@@ -259,11 +258,233 @@ color:#fff;
     font-size: 16px;
 }
 
+.btnLogin-popup {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: blueviolet;
+    border: 2px solid #000000;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em; 
+    color: #fff;
+    font-weight: 500;
+    padding: 0.5em 1em; 
+    z-index: 9999;
+    position: fixed;
+    bottom: 2%; 
+    right: 2%; 
+}
+
+.btnLogin-popup:hover {
+    background-color: #fff;
+    color: #ff0000;
+}
+
+.login-form {
+    display: none; 
+    position: fixed; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    max-width: 90%; 
+    max-height: 90%; 
+    overflow-y: auto; 
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    z-index: 10000;
+}
+
+#btn-login {
+    font-size: 16px;
+}
+
+#loginForm {
+    font-size: 16px;
+}
+
+.wrapper {
+    position: fixed;
+    background: transparent;
+    border: 2px solid rgba(255, 255, 255, .5);
+    border-radius: 20px;
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 30px rgba(0, 0, 0, rgba(255, 255, 255, .5));
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    transform: scale(0);
+    transition: transform .5 ease, height .2s ease;
+}
+
+
+.wrapper.active-popup {
+    transform: scale(1);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.wrapper .icon-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 45px;
+    height: 45px;
+    background: #000000;
+    font-size: 2em;
+    color: #fff;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    border-bottom-left-radius: 20px;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.form-box h2{
+    font-size: 2em;
+    color: #000000;
+    text-align: center;
+}
+
+.input-box {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    border-bottom: 2px solid #162938;
+    margin: 30px 0;
+}
+
+.input-box label{
+    position: absolute;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    font-size: 1em;
+    color: #000000;
+    font-weight: 500;
+    pointer-events: none;
+    transition: .5s;
+}
+
+.input-box input:focus~label,
+.input-box input:valid~label {
+top: -5px;
+}
+
+.input-box input {
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1em;
+    color: #000000;
+    font-weight: 600;
+    padding: 0 35px 0 5px;
+}
+
+.input-box .icon {
+    position: absolute;
+    right: 8px;
+    font-size: 1.2em;
+    color: #000000;
+    line-height: 57px;
+}
+
+.input-box .toggle-password {
+    position: absolute;
+    right: 45px;
+    font-size: 1.2em;
+    color: #000000;
+    line-height: 57px;
+    cursor: pointer;
+    transition: .2s linear;
+}
+
+.input-box .toggle-password.active {
+    color: #ffffff;
+}
+
+.remember-forgot {
+    font-size: .9em;
+    color:#000000;
+    font-weight: 500;
+    margin: -15px 0 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.remember-forgot label input {
+    accent-color: #000000;
+    margin-right: 3px;
+}
+
+.remember-forgot a{
+    color:#000000;
+    text-decoration: none;
+    margin-left: 8px;
+}
+
+.remember-forgot a:hover{
+    text-decoration: underline;
+}
+
+.btn {
+    width: 100%;
+    height: 45px;
+    background: #162938;
+    border: none;
+    outline: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em;
+    color: #fff;
+    font-weight: 500;
+}
+
+.btn:hover {
+    color: white;
+    background-color: red;
+}
+
+.login-register{
+    font-size: .9em;
+    color: #000000;
+    text-align: center;
+    font-weight: 500;
+    margin: 25px 0 10px;
+}
+
+.login-register p a {
+    color: #000000;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.login-register p a:hover {
+    text-decoration: underline;
+}
+
+.register{
+    display: none;
+}
+
+/* Estilos específicos para dispositivos pequeños */
+@media (max-width: 768px) {
+    .login-form {
+        width: 90%; /* Reducimos el ancho en dispositivos pequeños */
+    }
+}
+
 @media (max-width:991px){
 
-html{
+html {
     font-size: 55%;
 }
+
 
     .submenu:hover #carrito {
         min-width: 100%;
