--- a/style.css
+++ b/style.css
@@ -455,6 +455,27 @@ img {
     color: #ff0000;
 }
 
+.btn-panel {
+    background-color: blueviolet;
+    border: 2px solid #fff;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em; 
+    color: #fff;
+    font-weight: 500;
+    padding: 0.5em 1em; 
+    z-index: 9999;
+    position: fixed;
+    top: 2%; 
+    right: 2%;
+    transition: .2s linear;
+}
+
+.btn-panel:hover {
+    background-color: #fff;
+    color: #ff0000;
+}
+
 .login-form {
     display: none; 
     position: fixed; 
